--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An E-Commerce Admin Dashboard, providing essential functionalities for managing online stores efficiently. With features focused on Dashboard, Products, Orders, Customers, and Accounts, developers can build a robust backend system to streamline administration tasks and enhance user experience.",
   "main": "server.js",
   "scripts": {
-    "dev": "node --watch --env-file .env server.js"
+    "client": "npx tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch",
+    "server": "node --watch --env-file .env server.js"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,8 @@
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
